test/invalid/baseline/extattr-double-field.txt
Syntax error at line 2, since `dictionary Foo`:
  [Clamp] [Clamp] unsigned long
          ^ Illegal double extended attribute lists, consider merging them
